[gd_scene load_steps=21 format=3 uid="uid://b8ok1m3wh7160"]

[ext_resource type="Script" path="res://castleControl.gd" id="1_trork"]
[ext_resource type="Texture2D" uid="uid://ska2m77n50xm" path="res://inside.png" id="1_vpivo"]
[ext_resource type="PackedScene" uid="uid://3kidvivnys7h" path="res://player.tscn" id="2_0q1u8"]
[ext_resource type="Script" path="res://dialogue_trigger.gd" id="3_mh8vi"]
[ext_resource type="Theme" uid="uid://babdwm0flbrd6" path="res://ScoreSize.tres" id="4_l3i78"]
[ext_resource type="AudioStream" uid="uid://b0k8k1u6sj5kb" path="res://test.mp3" id="4_pxlrv"]
[ext_resource type="Script" path="res://outsideCastle.gd" id="7_3c42b"]
[ext_resource type="Script" path="res://quiz.gd" id="8_ir48a"]
[ext_resource type="AudioStream" uid="uid://bcbqw21j26gbe" path="res://quiz.mp3" id="9_4y2la"]
[ext_resource type="Script" path="res://quiz_ui.gd" id="10_8cmon"]
[ext_resource type="StyleBox" uid="uid://b57oijho8rmej" path="res://normal_button_quiz.tres" id="10_dxw8s"]
[ext_resource type="StyleBox" uid="uid://buit2etobpl21" path="res://CorrectAnswerStyle.tres" id="11_phmxj"]
[ext_resource type="Theme" uid="uid://dvcwjkyhd571w" path="res://fontsize.tres" id="11_yd52u"]
[ext_resource type="Texture2D" uid="uid://bmxadfct0tyws" path="res://heart emoji.png" id="12_5gbbk"]
[ext_resource type="StyleBox" uid="uid://bph3hfo4lpnd" path="res://WrongAnswerStyle.tres" id="12_crnbj"]
[ext_resource type="StyleBox" uid="uid://dusrylw1u8v50" path="res://quiz_colours.tres" id="13_hdbxp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d7le1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw4j8"]
size = Vector2(12.5, 10.9)

[sub_resource type="CircleShape2D" id="CircleShape2D_rm0uy"]

[sub_resource type="Theme" id="Theme_xekde"]
default_font_size = 35

[node name="Node" type="Node"]
script = ExtResource("1_trork")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_vpivo")

[node name="CharacterBody2D" parent="." instance=ExtResource("2_0q1u8")]
position = Vector2(882, 687)
scale = Vector2(2, 2)

[node name="LabelAnchor" type="Node2D" parent="CharacterBody2D"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D/LabelAnchor"]
remote_path = NodePath("../../../World UI/UI position")
update_rotation = false
update_scale = false

[node name="DialogueTrigger" type="Area2D" parent="."]
scale = Vector2(5, 5)
script = ExtResource("3_mh8vi")
audio_stream = ExtResource("4_pxlrv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTrigger"]
position = Vector2(97.6, 122.8)
shape = SubResource("CircleShape2D_d7le1")

[node name="DialogueTrigger2" type="Area2D" parent="."]
scale = Vector2(5, 5)
script = ExtResource("3_mh8vi")
audio_stream = ExtResource("4_pxlrv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTrigger2"]
position = Vector2(89.8, 66.2)
shape = SubResource("RectangleShape2D_yw4j8")

[node name="Button" type="Button" parent="."]
offset_left = 943.0
offset_top = 685.0
offset_right = 1093.0
offset_bottom = 716.0
toggle_mode = true
text = "Outside the Castle"
script = ExtResource("7_3c42b")

[node name="Quiz" type="Area2D" parent="."]
scale = Vector2(5, 5)
script = ExtResource("8_ir48a")
audio_stream = ExtResource("9_4y2la")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quiz"]
position = Vector2(262.8, 62)
shape = SubResource("CircleShape2D_rm0uy")

[node name="QuizUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchor_left = 0.684
anchor_top = 0.287
anchor_right = 0.684
anchor_bottom = 0.287
offset_left = -9.28003
offset_top = -9.95999
offset_right = 9.71997
offset_bottom = 10.04
script = ExtResource("10_8cmon")
default_style = ExtResource("10_dxw8s")
correct_style = ExtResource("11_phmxj")
wrong_style = ExtResource("12_crnbj")

[node name="Panel" type="Panel" parent="QuizUI"]
layout_mode = 0
offset_left = -623.0
offset_top = -400.0
offset_right = 577.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("13_hdbxp")

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 118.0
offset_right = 1150.0
offset_bottom = 359.0
theme = ExtResource("11_yd52u")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 412.0
offset_right = 526.0
offset_bottom = 534.8
theme = ExtResource("11_yd52u")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "A"

[node name="Button2" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 412.0
offset_right = 1116.0
offset_bottom = 534.8
theme = ExtResource("11_yd52u")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "B"

[node name="Button3" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 596.0
offset_right = 526.0
offset_bottom = 718.8
theme = ExtResource("11_yd52u")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "C"

[node name="Button4" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 596.0
offset_right = 1116.0
offset_bottom = 718.8
theme = ExtResource("11_yd52u")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "D"

[node name="TimerLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 956.0
offset_top = 29.0
offset_right = 1171.0
offset_bottom = 112.0
theme = ExtResource("11_yd52u")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.5
offset_top = 30.0
offset_right = 184.5
offset_bottom = 98.0
theme = ExtResource("4_l3i78")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="QuizUI/Panel"]
position = Vector2(79.5, 67)
texture = ExtResource("12_5gbbk")

[node name="Hint" type="Panel" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 56.0
offset_right = 848.0
offset_bottom = 556.0
theme_override_styles/panel = ExtResource("13_hdbxp")

[node name="Label" type="Label" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 471.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Close Hint" type="Button" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 460.0
text = "Close Hint"

[node name="Hint Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 371.0
offset_right = 172.0
offset_bottom = 402.0
text = "Hint"

[node name="Statistics" type="ScrollContainer" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 361.0
offset_right = 1153.0
offset_bottom = 750.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Stats_Label" type="Label" parent="QuizUI/Panel/Statistics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 1056.0
offset_top = 45.0
offset_right = 1156.0
offset_bottom = 105.0
theme_override_styles/normal = ExtResource("10_dxw8s")
text = "Exit"

[node name="Question Timer" type="Timer" parent="QuizUI"]
process_mode = 3

[node name="Global Timer" type="Timer" parent="QuizUI"]

[node name="World UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3633.0
offset_top = 2132.0
offset_right = 3749.0
offset_bottom = 2172.0

[node name="UI position" type="Node2D" parent="World UI"]
position = Vector2(-2751, -1445)

[node name="Score" type="Label" parent="World UI/UI position" groups=["ScoreBox"]]
offset_left = 768.0
offset_top = -493.0
offset_right = 946.0
offset_bottom = -447.0
theme = ExtResource("4_l3i78")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="World UI/UI position" groups=["DialogueBox"]]
offset_left = -907.0
offset_top = 440.0
offset_right = 914.0
offset_bottom = 500.0
theme = SubResource("Theme_xekde")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Lives" type="Label" parent="World UI/UI position" groups=["LivesBox"]]
offset_left = 829.0
offset_top = -433.0
offset_right = 941.0
offset_bottom = -365.0
theme = ExtResource("4_l3i78")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="World UI/UI position" groups=["HeartEmoji"]]
position = Vector2(836, -396)
texture = ExtResource("12_5gbbk")

[connection signal="body_entered" from="DialogueTrigger" to="DialogueTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="DialogueTrigger2" to="DialogueTrigger2" method="_on_body_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="body_entered" from="Quiz" to="Quiz" method="_on_body_entered"]
[connection signal="pressed" from="QuizUI/Panel/Hint/Close Hint" to="QuizUI" method="_on_close_hint_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Hint Button" to="QuizUI" method="_on_hint_button_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Exit" to="QuizUI" method="_on_exit_pressed"]
[connection signal="timeout" from="QuizUI/Question Timer" to="QuizUI" method="_on_timer_timeout"]
